# recordingPy

./: .gitignore  README.md  a.py  b.py  main.py  main1.py  output.avi  pyproject.toml  requirementsWindows.txt  screenGrabber.py  video0.avi  x.py  x2.py
code/: c.py  f.py
code/mss/: a.py
cv2Scripts/: main.py  screenGrabberMp4.py
fileTemplates/: a.py  x.py
mssScripts/: takeSS1.py
pilScripts/: a.py  b.py
prueba1/: a.py  b.py  commonSteps.py
refactor/: a.py  commonSteps.py  x1.py  x2.py
