[tool.poetry]
name = "recordingpy"
version = "0.1.0"
description = ""
authors = ["Hiram20buz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mss = "^9.0.1"
imageio = "^2.33.1"
moviepy = "^1.0.3"
opencv-python = "4.8.0.76"
pyautogui = "0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
